a1/brendan_gordon/TEST_PROGRAMS/invalidtype/cheuk_siow/invalidtype2.min
# Invalid type program 2: variable not declared.

var x: int;

x = 10;
y = 1.0;

